# lightning_detector

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml  ruff.toml
notebook/: plot_lightning_point.ipynb  plot_lightning_point.practiceipynb
src/: app.py  base.py  cohere_led.py  lightning_hyperbola.py  lightning_obs_station.csv  measure_lightning.py
src/etc/: lls_demo.service  lls_webapp.service  run_app.sh  run_lls_demo.sh  run_tileserver.sh  tileserver.service
src/log/: log_config.json
src/pages/: home.py
src/tileserver/: mbtileserver.py  run_tileserver.py
