[project]
name = "lightning-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.24.1",
    "dash>=3.0.3",
    "gpiozero>=2.0.1",
    "jupyterlab>=4.3.4",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
]
